﻿1.3.0
-----
1. Add option to control startup-state; visible, hidden, or remembered from
   previous run.
2. Basic undo/redo support for playqueue.
3. Search tab.
4. Optionally save scaled covers (used in artist and albums views) to disk.

1.2.1
-----
1. Only use old Qt DBUS type annotations for Qt less than 4.8.2
2. Use "(c)" instead of "©", as "©" seems to mess up Qt translations.
3. Fix tagtype and URL handler detection. Fixes Composer support, and streams.
4. Use 32x32 for drag'n'drop icon, 64x64 for highdpi.
5. Use audio-x-generic icon for drag'n'drop if no cover found.
6. Fix potential memory leak with cover images.
7. Fix crash when changing online view from list to tree, after a soundcloud
   search.
8. Use MPD status.playlistLength to determine number of playqueue items when
   controlling state of prev, next, and stop buttons.

1.2.0
-----
 1. Add support for opus audio format - AudioCD encoding, transcoding, HTTP
    server, etc.
 2. Add support for user-installable stream providers. See README for file
    format.
 3. Add config page to control which stream categories are enabled, to import
    new categories, and to remove imported categories.
 4. Request IceCast stream list in compressed format.
 5. Add ShoutCast search.
 6. For some stream categories (digitally imported, jazzradio, rockradio, sky,
    somaFm, and some user categories) add category name to stream name when it
    is saved in favourites, or added to playqueue.
 7. Support composer tag - group albums via composer, edit tag, rename files
    using tag, and use field for dynamic playlists.
 8. Place HTTP stream URL into connections page, as URL could be different per
    connection.
 9. Use QListWidget in Qt preferences dialog, so that keyboard navigation can be
    used.
10. Add ability to 'filter search' stream categories.
11. Add option to prevent system from suspending whilst playing (Linux only).
12. If playqueue is cleared when dynamizer is running, then also stop dynamizer.