@@ -37,6 +37,7 @@ void OtherSettings::load()
     wikipediaIntroOnly->setChecked(Settings::self()->wikipediaIntroOnly());
     contextBackdrop->setChecked(Settings::self()->contextBackdrop());
     contextDarkBackground->setChecked(Settings::self()->contextDarkBackground());
+    contextAlwaysCollapsed->setChecked(Settings::self()->contextAlwaysCollapsed());
     toggleWikiNote();
 }
 
@@ -45,6 +46,7 @@ void OtherSettings::save()
     Settings::self()->saveWikipediaIntroOnly(wikipediaIntroOnly->isChecked());
     Settings::self()->saveContextBackdrop(contextBackdrop->isChecked());
     Settings::self()->saveContextDarkBackground(contextDarkBackground->isChecked());
+    Settings::self()->saveContextAlwaysCollapsed(contextAlwaysCollapsed->isChecked());
 }
 
 void OtherSettings::toggleWikiNote()
