@@ -56,6 +56,23 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="0">
+      <widget class="BuddyLabel" name="contextAlwaysCollapsedLabel">
+       <property name="text">
+        <string>Always collapse into a single pane:</string>
+       </property>
+       <property name="buddy">
+        <cstring>contextAlwaysCollapsed</cstring>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="OnOffButton" name="contextAlwaysCollapsed">
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
